--- a/alexa_rank_service.info.yml
+++ b/alexa_rank_service.info.yml
@@ -2,4 +2,4 @@ name: Alexa Rank Service
 description: Provides a PHP API service for looking up website rankings through Alexa.
 type: module
 core: 8.x
-package: Alexa Rank Service
+package: Alexa Rank
